rust/tests/errors/invalid_for_syntax.hyper
for item items:
    <li>{item}</li>
end
